(feat) add brick & brick cva
